# Agentic_cure_graph

./: Dockerfile  docker-compose.yml  main.py  metadata.json  pyproject.toml
agents/: __init__.py  evidence_agent.py  hypothesis_agent.py  patient_insight_agent.py
agents/a2a/: __init__.py  server.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: GraphCanvas.css  GraphCanvas.jsx  HypothesisPanel.css  HypothesisPanel.jsx  InputPanel.css  InputPanel.jsx
mcp_server/: __init__.py  server.py  tools.py
src/github_viz/: __init__.py  cli.py  config.py  persistence.py  providers.py  server.py  services.py
src/github_viz/analysis/: __init__.py  graph.py  llm.py  models.py  parser.py  stats.py
src/github_viz/api/: __init__.py  schemas.py  state.py
src/github_viz/data/: seed_biomedical_graph.json
src/github_viz/data_providers/: chembl_api.py  fetcher.py  openfda_api.py  pubmed_api.py
src/github_viz/ingestion/: __init__.py  fhir.py
test_data/: patient_alzheimers.json  patient_lung_cancer.json  patient_parkinsons.json  run_tests.ps1
tests/: conftest.py  test_agents.py  test_graph.py  test_infra.py  test_parser.py  test_server.py
utils/: fhir_parser.py
