[project]
name = "agentic-cure-graph"
version = "0.5.0"
description = "Patient-driven biomedical graph reasoning backend with FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "requests>=2.32",
  "rich>=13.7",
  "typer>=0.12",
  "uvicorn>=0.30",
  "mcp>=1.0.0",
  "a2a>=0.2.0",
]

[project.scripts]
codegraph = "github_viz.cli:app"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "httpx>=0.27,<0.28",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
